completed task 11.2 button changes when clicking on a new color

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Pythagorean table</title>
   </head>
   <body>
     <h2>Таблиця Піфагора 10×10</h2>
     <div id="table-container"></div>
-    <script src="js/scipt.js"></script>
+
+    <div id="text" class="red">Це текст, який змінює колір!</div>
+    <button id="toggleBtn" class="Btn">Змінити колір</button>
+    <script src="js/script.js"></script>
   </body>
 </html>
