task 11.3 completed, when you click on the button a random picture appears

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
     <div id="text" class="red">Це текст, який змінює колір!</div>
     <button id="toggleBtn" class="Btn">Змінити колір</button>
+
+    <h3 class="moving">Випадкове зображення</h3>
+    <img
+      id="randomImage"
+      class="moving"
+      src=""
+      alt="random image"
+      width="300"
+    />
+    <button id="randomBtn" class="rabdomBtnColor">click</button>
     <script src="js/script.js"></script>
   </body>
 </html>
